2008-05-08  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/: Change IPMI_ERR_OUTOFRANGE to IPMI_ERR_ERRNUMRANGE
	for consistency to other libraries.
	
2008-05-06  Albert Chu <chu11@llnl.gov>

	* ipmidetect/: Fix manpage dates.

	* common/doc/manpage-common-hostranged-text-shell.man,
	common/doc/manpage-common-hostranged-text-options.man: New files.

	* common/doc/manpage-common-hostranged-text-main.man: Adjust with
	more generic text.

	* common/doc/Makefile.am: Update for new files.

	* Adjust manpages appropriately for new common hostranged manpage
	info.
	
2008-05-05  Albert Chu <chu11@llnl.gov>

	* ipmi-sel/: Support --get-time and --set-time options.
	
2008-05-04  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/cmds/ipmi-sel-cmds.h,
	libfreeipmi/src/cmds/ipmi-sel-cmds.c,
	libfreeipmi/include/freeipmi/api/ipmi-sel-cmds-api.h,
	libfreeipmi/src/api/ipmi-sel-cmds-api.c: Support get and set sel
	time.
	
2008-05-03  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/cmds/ipmi-device-global-cmds.h,
	libfreeipmi/src/cmds/ipmi-device-global-cmds.c,
	libfreeipmi/include/freeipmi/api/ipmi-device-global-cmds-api.h,
	libfreeipmi/src/api/ipmi-device-global-cmds-api.c: Support cold
	and warm reset.

	* bmc-device/: New tool.

	* configure.ac, Makefile.am, freeipmi.spec.in, doc/freeipmi.7.in,
	README: Update appropriately for new tool.
	
2008-05-02  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/cmds/ipmi-device-global-cmds.h,
	libfreeipmi/src/cmds/ipmi-device-global-cmds.c,
	libfreeipmi/include/freeipmi/api/ipmi-device-global-cmds-api.h,
	libfreeipmi/src/api/ipmi-device-global-cmds-api.c: Support get
	device guid command.

	* bmc-info/: Add support for --guid.

	* README, doc/freeipmi.7.in, bmc-info/bmc-info.8.pre.in: Update
	bmc-info tool description.

	* libfreeipmi/src/cmds/ipmi-device-global-cmds.c
	(tmpl_cmd_get_device_id_rs): Rename ipmi_version field names to be
	consistent to rest of freeipmi.
